--- a/package.json
+++ b/package.json
@@ -4,21 +4,24 @@
   "description": "",
   "main": "server.js",
   "engines": {
-  	"node": "14.5.0"
+    "node": "14.5.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-	"build": "npx webpack --config webpack.config.js"
+    "build": "npx webpack --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "npx": "^10.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "three": "^0.118.3"
+    "three": "^0.118.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
@@ -28,8 +31,6 @@
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
     "babel-plugin-react-require": "^3.1.3",
-    "babel-plugin-transform-require": "^1.1.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "babel-plugin-transform-require": "^1.1.0"
   }
 }
