--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cannon": "^0.6.2",
     "express": "^4.17.1",
-    "npx": "^10.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "three": "^0.118.3",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "three": "^0.118.3"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
@@ -30,6 +28,8 @@
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
     "babel-plugin-react-require": "^3.1.3",
-    "babel-plugin-transform-require": "^1.1.0"
+    "babel-plugin-transform-require": "^1.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   }
 }
